added diaries, added user registration validations, tidying up the code
