# app/users/controller/user_controller.go
@@ -36,10 +36,10 @@ func (u UserController) Login(c *fiber.Ctx) error {
 // @Summary Register User
 // @Id RegisterUser
 // @Tags User
-// @Param register body models.ReqUserRegister true "all fields mandatory"
-// @Success 200 {object} models.ResponseSuccess "token: "exampletokenresponse" "
+// @Param register body models.ReqUserRegister true "all fields mandatory. ex: (Birthday format DD-MM-YYYY)"
+// @Success 200 {object} models.ResponseSuccess "token: "User Successfully Registered" "
 // @Failure 422 {object} models.ResponseErrors "code: 422, message: "Invalid request" "
-// @Failure 401 {object} models.ResponseErrors "code: 401, message: "Username or password not valid, please try again" "
+// @Failure 401 {object} models.ResponseErrors "code: 401, message: "Invalid Email Format" "
 // @Router /api/v1/register [post]
 func (u UserController) Register(c *fiber.Ctx) error {
 	req := models.ReqUserRegister{}
@@ -48,9 +48,9 @@ func (u UserController) Register(c *fiber.Ctx) error {
 	}
 	err := u.UserService.RegisterUser(&req)
 	if err != nil {
-		return models.ResponseError(c, "Cannot Register this user", 401)
+		return models.ResponseError(c, err.Error(), 401)
 	}
-	return models.ResponseJSON(c, fiber.Map{"message": "User Successfully Created"})
+	return models.ResponseJSON(c, fiber.Map{"message": "User Successfully Registered"})
 }
 
 // GetCurrentDeviceID godoc
@@ -58,9 +58,9 @@ func (u UserController) Register(c *fiber.Ctx) error {
 // @Id Get Current Device ID
 // @Tags User
 // @Security Token
-// @Success 200 {object} models.ResponseSuccess "token: "exampletokenresponse" "
+// @Success 200 {object} models.ResponseSuccess "exampledeviceid"
 // @Failure 422 {object} models.ResponseErrors "code: 422, message: "Invalid request" "
-// @Failure 401 {object} models.ResponseErrors "code: 401, message: "Username or password not valid, please try again" "
+// @Failure 401 {object} models.ResponseErrors "code: 401, message: "device ID not found" "
 // @Router /api/v1/getcurrentdeviceid [get]
 func (u UserController) GetCurrentDeviceID(c *fiber.Ctx) error {
 	claims, err := utils.ExtractTokenMetadata(c)
@@ -69,17 +69,4 @@ func (u UserController) GetCurrentDeviceID(c *fiber.Ctx) error {
 	}
 	deviceID := u.UserService.GetCurrentDeviceID(claims.ID)
 	return models.ResponseJSON(c, fiber.Map{"deviceID": deviceID})
-}
-
-// ChangePassword godoc
-// @Summary Change Password
-// @Id ChangePassword
-// @Tags User
-// @Security token
-// @Success 200 {object} models.ResponseSuccess "token: "exampletokenresponse" "
-// @Failure 422 {object} models.ResponseErrors "code: 422, message: "Invalid request" "
-// @Failure 401 {object} models.ResponseErrors "code: 401, message: "Username or password not valid, please try again" "
-// @Router /api/v1/changepassword [put]
-func (u UserController) ChangePassword(c *fiber.Ctx) error {
-	return models.ResponseJSON(c, fiber.Map{"token": "changePassword"})
 }
