# models/diary_model.go
@@ -1,0 +1,13 @@
+package models
+
+type ReqCreateDiary struct {
+	DatePost string `json:"datePost"`
+	Title    string `json:"title"`
+	BodyText string `json:"bodyText"`
+}
+
+type ReqUpdateDiary struct {
+	DatePost string `json:"datePost"`
+	Title    string `json:"title"`
+	BodyText string `json:"bodyText"`
+}
